# django-event-feed

./: .env.dist  .gitignore  LICENSE  Makefile  Procfile  README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt
api/: admin.py  authentication.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_auto_20200909_2028.py  0003_auto_20200909_2044.py  0004_auto_20200910_1529.py
api/serializers/: authentication.py  events.py  profiles.py
api/tests/: helpers.py  test_api_authentication.py  test_api_events.py  test_api_profiles.py  test_unit_models.py
api/views/: authentication.py  events.py  profiles.py
core/: admin.py  custom_permissions.py  email_backends.py  models.py  tasks.py
core/migrations/: 0001_initial.py  0002_auto_20200909_2028.py  0003_auto_20200909_2044.py  0004_auto_20200910_1529.py
core/tests/: helpers.py  test_integration_models.py  test_unit_emails.py  test_unit_models.py
eventfeed/: asgi.py  celery.py  settings.py  settings_test.py  urls.py  wsgi.py
